--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,7 @@
     "name": "summifyAllTables",
     "description": "Click to insert a row to any tables with that column's sum.",
     "version": "0.1.0",
-    "permissions": [
-        "activeTab"
-    ],
+    "permissions": ["activeTab"],
     "browser_action": {
         "default_icon": {
             "512": "summifyAllTables.png"
@@ -13,8 +11,6 @@
     },
     "background": {
         "persistent": false,
-        "scripts": [
-            "summifyAllTables.js"
-        ]
+        "scripts": ["summifyAllTables.js"]
     }
 }
